# FullstackCollege

backend/: .gitignore  Docker-compose.yaml  main.py  private.pem  public.pem  pyproject.toml
backend/core/: auth.py  config.py  security.py
backend/database/: db.py  init_db.py  schema.sql
backend/domain/: exceptions.py
backend/domain/interfaces/: booking_repository.py  film_repository.py  hall_repository.py  s3_repository.py  session_repository.py  user_repository.py
backend/repositories/: booking_repository.py  film_repository.py  hall_repository.py  s3_repository.py  session_repository.py  user_repository.py
backend/routers/: auth.py  bookings.py  films.py  halls.py  sessions.py  views_router.py
backend/schemas/: bookings.py  films.py  halls.py  sessions.py  token.py  users.py
backend/services/: booking_service.py  film_service.py  image_service.py  session_service.py  user_service.py
backend/utils/: image_utils.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/FilmsSystem/src/: App.vue
frontend/FilmsSystem/src/api/: auth.js
frontend/FilmsSystem/src/components/: RegistrationForm.vue
frontend/FilmsSystem/src/pages/: Admin.vue  FilmsDetails.vue  Home.vue
frontend/src/api/: auth.js
frontend/src/components/: LoginForm.vue
frontend/src/components/Films/: FilmCard.vue  FilmGrid.vue
frontend/src/components/Layout/: Navbar.vue
frontend/src/pages/: Admin.vue  Collections.vue  FilmBooking.vue  Home.vue  Profile.vue
frontend/src/router/: guards.js  index.js
frontend/src/stores/: films.js
(+8 files in other folders)
